# Atlas

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
.cache/clangd/index/: animation.cpp.39039146675BCF19.idx  animation.cpp.C374EEC5DD6266D7.idx  animation.hpp.1C7AFE33D10F6BEC.idx  animation.hpp.C4B07452CE5898FB.idx  automerge.cpp.816909E864B0BDF3.idx  automerge.cpp.8428EC289FA7C4FC.idx  autoreset.hpp.54BEF489A51D0ACC.idx  autoreset.hpp.E5D25B6742465A58.idx  blink.cpp.703473FCE7C32995.idx  blink.cpp.7E78CDCBDF193503.idx  bold.cpp.1ED2A260D5F706ED.idx  bold.cpp.BE100957C7E9E37E.idx  border.cpp.BB2A9DB5A198B4E0.idx  border.cpp.F62EB94FA870EB1C.idx  box.cpp.9C7A28246EEB8F85.idx  box.cpp.B5AC50AF0374EA53.idx  box.hpp.1808682E2263AF1D.idx  box.hpp.F5EA3777AC4D7BB1.idx  box_helper.cpp.2B91DDA97C6EEF74.idx  box_helper.cpp.5073E3C595C03D90.idx  box_helper.hpp.0B4E1D6A4B148505.idx  box_helper.hpp.E2BD370166D2CA5F.idx  button.cpp.1E4423AF8C52B4FB.idx  button.cpp.70A3EE166DB7F5A7.idx  canvas.cpp.7182DCA63BDD5AB2.idx  canvas.cpp.D7C9D450E1FF0EF9.idx  canvas.hpp.369A4B29E6ABD357.idx  canvas.hpp.87BC6B529BC08799.idx  captured_mouse.hpp.42092DB505C1F218.idx  captured_mouse.hpp.C9721095C9E1B5FE.idx  (+206 more)
include/fprocessor/: audiotypes.hpp  loader.hpp
include/libavutil/: ffversion.h
include/utils/: streams.hpp  strings.hpp
lib/: libavdevice.so.62.2.100  libavformat.so.62  libswresample.so.6.2.100
lib/libavutil/: frame.h
lib/libpreproc/: CMakeLists.txt  pcm.cpp  pcm.hpp
src/: main.cpp
src/fprocess/: loader.cpp
src/utils/: streams.cpp
(+13 files in other folders)
